package StructurePattern.adatorPattern;

/**
 * Target
 */
public class Iphone {
    public void typecPhone() {
        System.out.println("信息从 typeC 口手机输出");
    }
}
