package StructurePattern.adatorPattern;

/**
 * Adaptee
 */
public interface Vga {
    void vgaInterface();
}
